fix eclipse warnings, generics